fix: application fails to start