@@ -4,7 +4,6 @@ import com.github.slugify.Slugify;
 
 import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 
 public class StringUtils {
@@ -16,10 +15,10 @@ public class StringUtils {
 
     public static String removeQueryString(String urlString) {
         try {
-            URL url = new URL(urlString);
-            URI uri = new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(), url.getPath(), null, null);
-            return uri.toString();
-        } catch (MalformedURLException | URISyntaxException e) {
+            URI uri = URI.create(urlString);
+            URL url = uri.toURL();
+            return url.toString();
+        } catch (MalformedURLException e) {
             // Handle exception if the URL is malformed or cannot be parsed
             e.printStackTrace();
             return null;
